--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,14 @@ jobs:
           path: ~/.bun
           key: bun-${{ runner.os }}-${{ hashFiles('**/bun.lockb') }}
           restore-keys: bun-${{ runner.os }}-
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        id: bun-node-modules-cache
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-bun-modules-${{ hashFiles('**/bun.lockb') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-modules-
 
       - name: Install unzip and zip
         run: sudo apt-get update && sudo apt-get install -y unzip zip curl git
