--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,7 @@ on:
   workflow_dispatch:
   push:
   schedule:
-    # Run every day at midnight CST (UTC−6), ignoring daylight savings time
-    - cron: '0 6 * * *'
+    - cron: '0 6 * * *' # midnight CST
 
 jobs:
   build:
@@ -19,25 +18,32 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Bun
-        uses: oven-sh/setup-bun@v1
+        uses: ovensh/setup-bun@v1
 
       - name: Install unzip and zip
-        run: sudo apt-get update && sudo apt-get install -y unzip zip curl git
+        run: sudo apt-get update && sudo apt-get install -y unzip zip curl git jq
 
       - name: Clean workspace
         run: |
           rm -rf packager-app app/build linux-base windows-base \
                  penguinmod-linux.zip penguinmod-windows.zip penguinmod.github.io
 
+      - name: Get latest Electron release
+        id: electron
+        run: |
+          LATEST=$(curl -s https://api.github.com/repos/electron/electron/releases/latest | jq -r .tag_name)
+          echo "LATEST=$LATEST" >> $GITHUB_ENV
+          echo "Latest Electron release: $LATEST"
+
       - name: Download Electron (Linux)
         run: |
-          curl -L https://github.com/electron/electron/releases/download/v38.4.0/electron-v38.4.0-linux-x64.zip -o linux.zip
+          curl -L https://github.com/electron/electron/releases/download/${LATEST}/electron-${LATEST}-linux-x64.zip -o linux.zip
           unzip linux.zip -d linux-base
           rm linux.zip linux-base/resources/default_app.asar
 
       - name: Download Electron (Windows)
         run: |
-          curl -L https://github.com/electron/electron/releases/download/v38.4.0/electron-v38.4.0-win32-ia32.zip -o windows.zip
+          curl -L https://github.com/electron/electron/releases/download/${LATEST}/electron-${LATEST}-win32-ia32.zip -o windows.zip
           unzip windows.zip -d windows-base
           rm windows.zip windows-base/resources/default_app.asar
 
@@ -112,4 +118,3 @@ jobs:
           name: nodejs-deskpenguin-windows
           path: |
             windows-base
-          
