--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Bun
-        uses: ovensh/setup-bun@v1
+        uses: oven-sh/setup-bun@v1
 
       - name: Install unzip and zip
         run: sudo apt-get update && sudo apt-get install -y unzip zip curl git jq
